Added db functionality to update notes in passages
