# docs/swagger.json
@@ -363,7 +363,7 @@
         },
         "/api/v1/messages/notes": {
             "post": {
-                "description": "Used to add user notes to a passage",
+                "description": "Used to update a user notes in a passage",
                 "consumes": [
                     "application/json"
                 ],
@@ -373,7 +373,7 @@
                 "tags": [
                     "Messages"
                 ],
-                "summary": "Add a Note to a Passage",
+                "summary": "Update a Note in a Passage",
                 "parameters": [
                     {
                         "type": "string",
@@ -384,7 +384,7 @@
                         "required": true
                     },
                     {
-                        "description": "Post a message",
+                        "description": "Post a note",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -397,7 +397,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Message"
+                            "$ref": "#/definitions/model.Note"
                         }
                     },
                     "400": {
@@ -1383,6 +1383,20 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.NoteRequest": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "passage_id": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
